# raif-lora

./: .gitignore  ITERATION_PLAN.md  NOTES.md  README.md  RECIPE.md  biome.json  pyproject.toml
.github/workflows/: vllm-ci.yml
assets/: demo-0.5b.tape
configs/: llama-3-3b-sft-smoke.yaml  llama-3-3b-sft-warm.yaml  llama-3-3b-sft.yaml
cuda/: README.md  eval_cuda.py  push_to_hub.py  requirements.txt  run_qwen3_finish.sh  run_qwen3_pipeline.sh  run_stage.sh  test_push_to_hub.py  train_unsloth.py
cuda/cloud/: README.md  bootstrap.sh  requirements-cloud.txt  serve_test.sh  upload_data.sh
examples/: README.md  chat.py  compare.py  demo.py  e2e_smoke.py  raif_models.py  serve.sh  setup_adapter.py
examples/ai-sdk/: demo.ts  package-lock.json  package.json  tsconfig.json
grammars/: README.md  grammar_lint.ts  raif.gbnf
src/: _raif_oracle.py  check_data.py  eval_core.py  eval_smoke.py  make_data.sh  make_data_augmented.sh  raif_bun.py  raif_decode.py  test_eval_smoke.py  test_raif_decode.py  test_raif_differential.py
