[project]
name = "raif-lora"
version = "0.5.0-dev"
description = "RAIF v0.5 LoRA fine-tune (M4 Max / MLX)"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "mlx>=0.21",
  "mlx-lm>=0.21",
  "huggingface-hub>=0.27",
  "datasets>=3.2",
  "pyyaml>=6.0",
  "rich>=13.9",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
]
